fixed projects page parallax on mobile and added the navbar links to all the pages

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -91,13 +91,14 @@ p {
     border: 1px solid rgba(1000, 1000, 1000, 0.7);
     border-radius: 7px;
     margin: 0 auto;
-    color: rgba(1000, 1000, 1000, 0.7);
+    
 }
 
 .navItem {
     float: left;
     font-family: 'Raleway', sans-serif;
     transition: all 0.3s;
+    color: rgba(1000, 1000, 1000, 0.7);
 }
 
 .navItem:hover {
@@ -535,7 +536,7 @@ p {
     }
 
     .parallax {
-        background-attachment: scroll;
+        background-attachment: scroll !important;
     }
 
     #mainVideoContainer {
